Bug 167885 - dolphin freezes if the mouse gets over a fifo (pipe) file
Summary: dolphin freezes if the mouse gets over a fifo (pipe) file
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Jos van den Oever
URL:
Keywords:
: 169786 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-31 19:53 UTC by George Kiagiadakis
Modified: 2009-01-03 14:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description George Kiagiadakis 2008-07-31 19:53:33 UTC
Version:           1.1 (using KDE 4.1.0)
Installed from:    Debian testing/unstable Packages
Compiler:          gcc version 4.3.1 (Debian 4.3.1-2)
 
OS:                Linux

Steps to reproduce:
1) $ mknod test p
2) open dolphin in that directory
3) get the mouse over the "test" file.
4) dolphin is now freezed.
5) to make it continue, use "echo garbage > test"

As far as I can tell, it just opens the pipe and tries to read its contents, which is obviously the wrong thing to do, as this operation is blocking. That's why it returns to the event loop only if it reads something from the pipe.
Comment 1 Peter Penz 2008-08-02 20:45:26 UTC
Reassigned this issue to Strigi. @Jos: This seems to be an issue when getting the meta information with KFileMetaInfo. The issue can be reproduced when hovering the file if the Information Panel from Dolphin is enabled.
Comment 2 Peter Penz 2008-08-26 06:31:45 UTC
*** Bug 169786 has been marked as a duplicate of this bug. ***
Comment 3 Michal Witkowski 2008-11-10 11:36:50 UTC
I have strigi disabled and the bug still exists. I belive this is an issue with file contents preview.
Comment 4 Jos van den Oever 2009-01-03 14:18:12 UTC
SVN commit 904860 by vandenoever:

Check whether a file can be opened by QFile.
If a file is not a file, a directory or a symlink, it is not opened for analysis.
QFile::open(QIODevice::ReadOnly) will hang when trying to open a pipe created with e.g. "mknod test p".

BUG:167885



 M  +4 -1      kfilemetainfo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=904860