Check whether a file can be opened by QFile. If a file is not a file, a directory or a symlink, it is not opened for analysis. QFile::open(QIODevice::ReadOnly) will hang when trying to open a pipe created with e.g. "mknod test p".

BUG:167885


svn path=/trunk/KDE/kdelibs/; revision=904860